<resources>
    <string name="app_name">AnimalMate</string>
    <string name="login_id">아이디를 입력하세요</string>
    <string name="login_pw">비밀번호를 입력하세요</string>
    <string name="signup_id">아이디를 입력하세요</string>
    <string name="signup_pw">비밀번호를 입력하세요</string>
    <string name="signup_name">이름을 입력하세요</string>
    <string name="signup_phone">전화번호를 입력하세요</string>
    <string name="signup_email">이메일을 입력하세요</string>
    <string name="developer">개발자 정보</string>
    <string name="developer_name">박 유 빈</string>
    <string name="developer_school">건국대학교 컴퓨터공학부 201811183</string>
    <string name="developer_email">park_ubin@naver.com</string>
    <string name="change_pw">기존 비밀번호를 입력하세요</string>
    <string name="change_newpw">새로운 비밀번호를 입력하세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
